--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="account-dropdown__body">
                   <div class="account-dropdown__item">
-                    <a href="#">
+                    <a href="conta.html">
                       <i class="zmdi zmdi-account"></i>Conta</a>
                   </div>
 
