--- a/navbar-mobile.html
+++ b/navbar-mobile.html
@@ -37,7 +37,7 @@
                 <li>
                     <a href="#" class=" text-white"> <i class="fas fa-user"></i>
                         Clientes
-                        <span class="badge badge-pill badge-warning">Em Breve</span>
+                        <span class="badge badge-pill badge-success">Novo</span>
                     </a>
                 </li>
 
