--- a/register.html
+++ b/register.html
@@ -125,6 +125,7 @@
                                 </div>
                                 -->
                             </form>
+                            <h4 id="error"></h4>
                             <div class="register-link pb-3">
                                 <h5>
                                     Já tem Conta ?
@@ -158,7 +159,7 @@
     <script src="vendor/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="vendor/chartjs/Chart.bundle.min.js"></script>
     <script src="vendor/select2/select2.min.js"> </script>
-    <script src="./js/jquery-image-blob.min.js"></script>
+
     <!-- Main JS-->
     <script src="js/main.js"></script>
     <script src="./js/register.js"></script>
