update fix img preview

--- a/login.html
+++ b/login.html
@@ -171,9 +171,9 @@
             } else if (obj.password == "") {
                 return $("#errorModal").modal("show")
             };
-            var post_url = "http://localhost:3000/user/login";
+           // var post_url = "http://localhost:3000/user/login";
 
-            // let post_url = "https://kd-gerenciador.herokuapp.com/user/login";
+         let post_url = "https://kd-gerenciador.herokuapp.com/user/login";
             $("#imgLoad").show();
 
             $.ajax({
