--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -21,7 +21,7 @@
 
           <div class="account-wrap ">
             <div class="account-item clearfix js-item-menu">
-              <div class="image">
+              <div class="image img-fluid">
                 <div class="usuario_foto"></div>
               </div>
               <div class="content">
@@ -29,10 +29,13 @@
               </div>
               <div class="account-dropdown js-dropdown" style="border:1px solid black">
                 <div class="info clearfix bg-black">
-                  <div class="image bg-white">
+                  <picture>
+                  <div class="image bg-white img-fluid ">
                     <a href="#">
-                      <div class="usuario_foto "></div>
+                    
+                        <div class="usuario_foto "></div>
                     </a>
+                  </picture>
                   </div>
                   <div class="content text-white">
                     <h5 class="name">
