--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -21,7 +21,7 @@
 
           <div class="account-wrap ">
             <div class="account-item clearfix js-item-menu">
-              <div class="image img-fluid">
+              <div class="image img-fluid img-user">
                 <div class="usuario_foto"></div>
               </div>
               <div class="content">
@@ -30,7 +30,7 @@
               <div class="account-dropdown js-dropdown" style="border:1px solid black">
                 <div class="info clearfix bg-black">
                   <picture>
-                  <div class="image bg-white img-fluid ">
+                  <div class="image bg-white img-fluid img-user">
                     <a href="#">
                     
                         <div class="usuario_foto "></div>
