finalizado adicionar cliente pelo balcao de vendas

--- a/clientes.html
+++ b/clientes.html
@@ -162,12 +162,13 @@
                 <div>
                   <h3 class="text-center mt-2 mb-3">Clientes</h3>
                   <div class="input-group col-12 col-md-6">
-                    <input class="form-control input-search" type="text" alt="lista-clientes"  placeholder="Buscar Clientes ou Endereço" >
+                    <input class="form-control input-search" type="text" alt="lista-clientes"
+                      placeholder="Buscar Clientes ou Endereço">
                     <div class="input-group-append">
-      
-                      <span class="input-group-text bg-black text-white  " id="busca data" >
+
+                      <span class="input-group-text bg-black text-white  " id="busca data">
                         <i class="fas fa-search mr-1"></i>
-                       </span>
+                      </span>
                     </div>
                   </div>
 
@@ -175,7 +176,8 @@
                 <!-- DATA TABLE -->
 
                 <div class="bg-light table-responsive mt-2">
-                  <table class="table table-hover bg-burguer-center table-fixed  border-cinza lista-clientes" id="tabelaCliente">
+                  <table class="table table-hover bg-burguer-center table-fixed  border-cinza lista-clientes"
+                    id="tabelaCliente">
                     <thead class="bg-black text-white text-center">
                       <th scope="col">#</th>
                       <th scope="col">Nome</th>
