--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -3,9 +3,9 @@
     <div class="container-fluid">
       <div class="header-wrap ">
         <form class="form-header" action="" method="POST">
-          <input class="au-input au-input--xl " type="text" name="search"
-            placeholder="Search for datas &amp; reports..." />
-          <button class="au-btn--submit " type="submit">
+          <input class="au-input au-input--xl " type="text" name="busca"
+            placeholder="Pesquisa" />
+          <button class="au-btn--submit " type="button">
             <i class="zmdi zmdi-search"></i>
           </button>
         </form>
