update register gif

--- a/register.html
+++ b/register.html
@@ -111,6 +111,7 @@
                                     </label>
                                 </div>
                                 -->
+                                <div class="gif col-md-12 text-center" id="gif"></div>
                                 <button class="au-btn au-btn--block bg-success btn m-b-20" type="button" id="submit">
                                     <p class="text-white font-weight-bold">Cadastrar</p>
                                 </button>
@@ -126,6 +127,7 @@
                                 -->
                             </form>
                             <h4 id="error"></h4>
+                          
                             <div class="register-link pb-3">
                                 <h5>
                                     Já tem Conta ?
