--- a/conta.html
+++ b/conta.html
@@ -120,7 +120,7 @@
                                             </div>
 
                                         </div>
-
+                                        <div class="gif col-md-12 text-center" id="gif"></div>
                                         <button class="au-btn au-btn--block bg-success btn mb-4" type="button"
                                             id="atualizar">
                                             <p class="text-white font-weight-bold">Atualizar</p>
