--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -2,7 +2,7 @@
   <div class="section__content section__content--p30">
     <div class="container-fluid">
       <div class="header-wrap ">
-        <form class="form-header" action="" method="POST">
+        <form class="form-header container" action="" method="POST">
           <input class="au-input au-input--xl " type="text" name="busca"
             placeholder="Pesquisa" />
           <button class="au-btn--submit " type="button">
@@ -13,13 +13,17 @@
 
 
         </div>
+   
         <div class="header-button">
-
+      <div>
+     <!--   <img  class="img scroll"src="./images/kd_sistema_blue.png" alt="" width="150px">-->
+      </div>
           <div class="noti-wrap">
 
           </div>
-
+     
           <div class="account-wrap ">
+        
             <div class="account-item clearfix js-item-menu">
               <div class="image img-fluid img-user">
                 <div class="usuario_foto"></div>
