--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -2,7 +2,7 @@
   <div class="section__content section__content--p30">
     <div class="container-fluid">
       <div class="header-wrap ">
-        <form class="form-header container" action="" method="POST">
+        <form class="form-header" action="" method="POST">
           <input class="au-input au-input--xl " type="text" name="busca"
             placeholder="Pesquisa" />
           <button class="au-btn--submit " type="button">
