--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <aside class="menu-sidebar d-none d-lg-block">
   <div class="logo">
     <a href="#">
-      <img src="../images/kd_sistema_blue.png" alt="KD Sistema">
+      <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
     </a>
   </div>
   <div class="menu-sidebar__content js-scrollbar1 text-white">
