update css fonts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="KD devs" />
   <meta name="keywords" content="au theme template" />
 
-  <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png" />
+  <link rel="apple-touch-icon" href="././images/icons/icon-57x57.png" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
   <!-- Title Page-->
